# cpp-3d-curves

./: README.md
3d-curves/: CMakeLists.txt  circle.cpp  circle.h  common.h  curve.h  ellipse.cpp  ellipse.h  helix.cpp  helix.h  main.cpp
3d-curves-with-dynamic-lib/: CMakeLists.txt
3d-curves-with-dynamic-lib/include/: common.h
